# kaikki-to-yomitan

./: .env.example  .gitignore  1-create-folders.js  2-extract-language.py  2-tidy-up.js  2-tidy-up.py  2-tidy-up.test.js  3-make-yomitan.js  3-opensubs-to-freq.py  3-tidy-up.js  3-tidy-up.py  3-tidy-up.test.js  4-create-freq.js  4-make-yomitan.js  4-make-yomitan.test.js  404.html  5-make-yezichak.js  5-make-yomichan.js  6-freq-to-rank.py  Cargo.toml  README.md  auto.sh  downloads-preamble.md  downloads.md  glossary.sh  index.html  instructions.md  instructions.txt  jsconfig.json  justfile  languages.json  main.sh  make-glossary.js  merge-ipa.js  mkdocs.yml  package-lock.json  package.json  release_metadata.json  script.js  style.css  (+5 more)
.github/workflows/: ci.yml  cloudflare-release.yml  download-ipa.js  generate-downloads.yml  node.js.yml  promote-to-latest.js  promote-to-latest.yml  release.yml  upload-files.js
assets/: languages.json  styles.css  styles_html.css  tag_bank_term.json  tag_bank_term_variety.json  tag_order.json
assets/styles/: styles.css  styles_experimental.css  styles_html.css  styles_yomitan.css
assets/tags/locale/: tags_de.json  tags_el.json  tags_ja.json
benches/: benchmark.rs
css/: index.html
data/: styles.css
data/language/: tag_bank_term.json  tag_order.json
data/language/ar/: tag_bank_ipa.json
data/language/de/: tag_bank_ipa.json  tag_bank_term.json
data/language/el/: tag_bank_ipa.json
data/language/en/: tag_bank_ipa.json
data/language/es/: tag_bank_ipa.json  tag_bank_term.json
data/language/fa/: tag_bank_ipa.json
data/language/pl/: tag_bank_ipa.json
data/language/pt/: tag_bank_term.json
data/test/: registry.json  update_tests.py
dictionaries/: index.html
docs/: css.md  dictionaries.md  download.md  formats.md  index.html  language.md  release_metadata.json  script.js  style.css  tags.md
docs/javascripts/: download.js
download/: index.html
formats/: index.html
html/: test-wty-en-en.html  test-wty-ja-ja.html
javascripts/: download.js
language/: index.html
migaku/: migaku_to_yomichan_dictionary.js
pages/: index.html
scripts/: build.py  deinflection_rules.py  generate_docs.py  metadata.py  release.py  tags.py  update_tests.py
search/: search_index.json
src/: cli.rs  download.rs  lang.rs  lib.rs  main.rs  path.rs  utils.rs
src/dict/: core.rs  glossary.rs  index.rs  ipa.rs  locale.rs  main.rs  mod.rs  other.rs  release.rs  scan.rs  writer.rs
src/models/: kaikki.rs  mod.rs  yomitan.rs
src/tags/: merge.rs  mod.rs  tags_constants.rs  tags_localization.rs
stylesheets/: extra.css
tags/: index.html
tests/: index.html  registry.json  registry_timestamps.json  tests.rs
tests/kaikki/: ar-en-extract.jsonl  cs-en-extract.jsonl  de-de-extract.jsonl  de-en-extract.jsonl  el-el-extract.jsonl  el-en-extract.jsonl  en-de-extract.jsonl  en-en-extract.jsonl  en-ru-extract.jsonl  es-es-extract.jsonl  fa-en-extract.jsonl  fi-en-extract.jsonl  fr-en-extract.jsonl  fr-fr-extract.jsonl  ga-en-extract.jsonl  grc-en-extract.jsonl  it-it-extract.jsonl  ja-en-extract.jsonl  ja-ja-extract.jsonl  ko-en-extract.jsonl  la-en-extract.jsonl  la-ja-extract.jsonl  nl-nl-extract.jsonl  pt-pt-extract.jsonl  ru-en-extract.jsonl  ru-ru-extract.jsonl  simple-simple-extract.jsonl  sq-en-extract.jsonl  th-en-extract.jsonl  zh-en-extract.jsonl  zh-zh-extract.jsonl
tools/: download-indexes.js  generate-downloads-table.sh  kaikki-breakdown.py  migaku-to-yomitan.js  structured-to-plain.js  v4-to-v3.js
types/: types.ts
update/: index.html
util/: kaikki-breakdown.py  sort-tags.js  util.js  write-dict.js
(+729 files in other folders)
